--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,18 @@
             <version>2.0.0.Final</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.6.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.6.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
